fix sidebar gradient in dark mode

--- a/public/colors.css
+++ b/public/colors.css
@@ -31,6 +31,7 @@
   --color-foreground-level-4: #a9b9c7;
   --color-foreground-level-5: #90a0af;
   --color-foreground-level-6: #546474;
+  --color-sidebar-gradient: 235, 239, 243;
 }
 
 [data-theme="dark"] {
@@ -66,4 +67,5 @@
   --color-foreground-level-4: #5e6d7a;
   --color-foreground-level-5: #8594a1;
   --color-foreground-level-6: #d3dee8;
+  --color-sidebar-gradient: 41, 52, 61;
 }
